force-app/main/default/objects/Promo_Grid_Specialty_Focus__c/Promo_Grid_Specialty_Focus__c.object-meta.xml
<CustomObject>
    <description>Specialty focus allocation for a Line territory Promo Grid.</description>
    <label>Promo Grid Specialty Focus</label>
    <nameField>
        <displayFormat>PGSF-{00000}</displayFormat>
        <label>Specialty Focus Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promo Grid Specialty Focus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>