force-app/main/default/objects/Promo_Grid_Specialty_Focus__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <description>Medical specialty focus for this Line Promo Grid.</description>
    <label>Specialty</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medical_Specialty</valueSetName>
    </valueSet>
</CustomField>