force-app/main/default/objects/Promo_Grid_Specialty_Focus__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>System key for Territory + Specialty uniqueness. Populated automatically on save.</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>